<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SchTtable</string>

    <string name="copyright" translatable="false">Copyright &#169; 2016-2017 By_syk. All rights reserved.</string>

    <string name="activity_sign_in">Welcome to SchTtable</string>
    <string name="activity_html">SchTtable HTML</string>
    <string name="activity_about">About</string>

    <string name="menu_new_app">Get latest app</string>
    <string name="menu_apply">Apply</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_more">More</string>
    <string name="menu_timetable_html">Web page</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about_me">About me</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_official_page">Official page</string>
    <string name="menu_share">Share</string>

    <string name="toast_refreshing">Refreshing&#8230;</string>
    <string name="toast_time_to_class_on">Class begins in %d minutes.</string>
    <string name="toast_time_to_class_over">Class ends in %d minutes.</string>
    <string name="toast_welcome">Welcome</string>
    <string name="toast_no_school">No chosen school</string>
    <string name="toast_error">:( Something went wrong.</string>
    <string name="toast_cancel_login">Cancelled</string>
    <string name="toast_no_network">:( No network connection.</string>
    <string name="toast_copied">Copied to clipboard: %s</string>
    <string name="toast_bug_reporting">Reporting BUG&#8230;</string>
    <string name="toast_bug_report_failed">:( Failed to report BUG.</string>

    <string name="dlg_title_detail">Detail</string>
    <string name="dlg_title_detail_conflict">Detail (CONFLICT)</string>
    <string name="dlg_title_about_me">About me</string>
    <string name="dlg_title_new_app">Latest app</string>
    <string name="dlg_title_privacy">Privacy statement</string>
    <string name="dlg_title_schools">Supported universities</string>
    <string name="dlg_bt_got_it">Got it</string>
    <string name="dlg_bt_cancel">Cancel</string>
    <string name="dlg_bt_sign_out">Sign out</string>
    <string name="dlg_bt_close">Close</string>
    <string name="dlg_bt_donated">Donated</string>
    <string name="dlg_bt_to_donate">To donate</string>
    <string name="dlg_bt_ok">OK</string>
    <string name="dlg_bt_download">Download</string>
    <string name="dlg_bt_refresh">Refresh now</string>
    <string name="dlg_bt_send_email">Send E-mail</string>
    <string name="dlg_bt_welcome">Welcome</string>
    <string name="dlg_bt_privacy">Privacy</string>
    <string name="dlg_bt_bug">BUG here</string>
    <string name="dlg_bt_report">Report</string>

    <string name="preference_cate_app">APP</string>
    <string name="preference_title_app">SchTtable</string>
    <string name="preference_summary_app">An university timetable app. SIMPLE, BRIEF and CLEAR.</string>
    <string name="preference_title_welcome">Welcome</string>
    <string name="preference_title_schools">Supported universities</string>
    <string name="preference_title_apply">Apply for new</string>
    <string name="preference_cate_developer">Developer</string>
    <string name="preference_title_developer">Independent developer</string>
    <string name="preference_summary_developer">"@By_syk"</string>
    <string name="preference_title_contact">Contact me</string>
    <string name="preference_summary_contact">My E-mail: [By_syk@163.com](email:By_syk@163.com)</string>
    <string name="preference_title_donate">Donate via Alipay</string>
    <string name="preference_summary_donate">SchTtable is developed by an independent developer and takes much spare time. If your school is supported and you like it, how about paying me a cup of coffee?</string>
    <string name="preference_cate_copyright">Copyright</string>
    <string name="preference_title_privacy">Privacy statement</string>
    <string name="preference_title_copyright">Copyright</string>
    <string name="preference_summary_copyright">Copyright &#169; 2016-2017 By_syk. All rights reserved.</string>
    <string name="preference_cate_debug">Debug</string>
    <string name="preference_title_server">Server status</string>
    <string name="preference_summary_server">@string/server_status_checking</string>

    <string name="school_name">School</string>
    <string name="stu_no">Student No.</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="error_empty_student_no">Please enter your student No. first.</string>
    <string name="error_empty_password">Please enter the password.</string>
    <string name="status_loading">Loading&#8230;</string>
    <string name="status_no_lessons">No lessons today</string>
    <string name="status_no_login">No login</string>
    <string name="status_empty">No items</string>
    <string name="status_no_network">:( No network connection.</string>
    <string name="status_error">:( Something went wrong.</string>
    <string name="status_error2">:( Something went wrong.\nerror code: %1$d\n%2$s</string>
    <string name="tag_course_name">Subject</string>
    <string name="tag_course_room">Room</string>
    <string name="tag_course_lecturer">Lecturer</string>
    <string name="tag_course_order">Period</string>
    <string name="tag_course_time">Time</string>
    <string name="tag_course_date">Date</string>
    <string name="tag_course_week">Week</string>
    <string name="course_order">%s</string>
    <string name="course_order_morning">Morning %s</string>
    <string name="course_order_afternoon">Afternoon %s</string>
    <string name="course_order_evening">Evening %s</string>
    <string name="course_order_week">Week %s</string>
    <string name="about_desc">
"SchTtable is an university timetable app. SIMPLE, BRIEF and CLEAR.
\nCopyright &#169; 2016-2017 By_syk. All rights reserved."</string>
    <string name="refresh_desc">The server catches data once and uses it for a long time. And the data may lose efficacy. If necessary, refresh now.</string>
    <string name="refreshing_desc">Asking server for refreshing. This may take one minute and then the app will be restarted automatically. Please wait for a moment&#8230;</string>
    <!--<string name="refresh_failed_desc">
":( Failed for the server to refresh.
\nMaybe it dues to:
- Wrong student No. or password.
- Something changed with your account.
- The school website did not work well.
- Something went wrong with server."</string>-->
    <string name="tag_me_school">School</string>
    <string name="tag_me_academy">Faculty</string>
    <string name="tag_me_major">Major</string>
    <string name="tag_me_name">Name</string>
    <string name="tag_me_student_no">Student No.</string>
    <!--<string name="tag_me_gpa">GPA</string>-->
    <string name="tag_me_term">Term</string>
    <string name="tag_me_before_vocation">Vocation</string>
    <string name="tag_me_before_summer_vocation">Vocation</string>
    <string name="tag_me_before_winter_vocation">Vocation</string>
    <string name="tag_me_before_term">New term</string>
    <string name="days_left">%d days left</string>
    <string name="term1">The first in %1$d-%2$d</string>
    <string name="term2">The second in %1$d-%2$d</string>
    <string name="logining_desc">
"Logining&#8230;
This may take one minute."</string>
    <string name="sign_out_desc">Are you sure to sign out?</string>
        <string name="donate_desc">
"SchTtable is developed by an independent developer and takes much spare time.
\nIf your school is supported and you like it, how about paying me a cup of coffee?
\nAlipay: [By_syk@163.com](copy:By_syk@163.com)"</string>
    <string name="tag_app_version">Version</string>
    <string name="tag_app_desc">Points</string>
    <string name="tag_app_date">Date</string>
    <string name="app_size_desc">About %s of mobile data required.</string>
    <string name="loading" translatable="false">&#8230;</string>
    <string name="html_shortcut_short_label">SchTtable HTML</string>
    <string name="html_shortcut_long_label">SchTtable HTML</string>
    <string name="service">App widget service</string>
    <string name="service_desc">For refreshing the app widget.</string>
    <string name="apply_school_desc">
"Besides for supported universities, %1$s are applied here: %2$s.
\nIf your school is absent and you want to use the app, send me an E-mail and help me add it. My E-mail address: [By_syk@163.com](copy:By_syk@163.com)
\nDeveloper's notes: I developed this app by myself. And, due to limited time and energy, Maybe I will delay your application. Understand a little."</string>
    <string name="char_split">", "</string>
    <string name="my_email" translatable="false">By_syk@163.com</string>
    <string name="email_subject_apply">SchTtable: Apply for new school</string>
    <string name="visit_official_page">[Visit official page&#8230;](%s)</string>
    <string name="downloading_desc">Downloading&#8230;</string>
    <string name="section_morning">Morning</string>
    <string name="section_afternoon">Afternoon</string>
    <string name="section_evening">Evening</string>
    <string name="intro_title_1">Welcome to use SchTtable</string>
    <string name="intro_desc_1">An university timetable app.</string>
    <string name="intro_title_2">SIMPLE, BRIEF and CLEAR</string>
    <string name="intro_desc_2">Try it&#8230;</string>
    <string name="intro_title_3">Preview</string>
    <string name="intro_desc_3">Brief course view</string>
    <string name="intro_title_4">Preview</string>
    <string name="intro_desc_4">Beautiful appwidget</string>
    <string name="bug_desc">Simply talk about the problem to help us solve it.</string>
    <string name="school_and_user_num">%1$s (Users:%2$d)</string>
    <string name="server_status_ok">OK %s</string>
    <string name="server_status_down">Down</string>
    <string name="server_status_checking">Checking&#8230;</string>
    <string name="server_status_check_failed">Failed to check</string>
    <string name="donate_code_alipay" translatable="false">[By_syk@163.com](alipay:https://qr.alipay.com/aex05154fiiurupx5ai0dd1|By_syk@163.com)</string>
    <string name="title_share">Share to schoolmate&#8230;</string>
    <string name="share_content">
"SchTtable, an university timetable app. It\'s SIMPLE, BRIEF and CLEAR.
Have a try: http://www.coolapk.com/apk/com.by_syk.schttable"</string>

</resources>
