<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dlg_vertical_padding"
        android:paddingLeft="@dimen/dlg_horz_padding"
        android:paddingRight="@dimen/dlg_horz_padding"
        android:paddingTop="@dimen/dlg_vertical_padding"
        android:shrinkColumns="1"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:text="@string/tag_me_school"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_school"
                android:layout_marginLeft="@dimen/unit_padding"
                android:layout_marginStart="@dimen/unit_padding"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginTop="@dimen/unit_padding">

            <TextView
                android:text="@string/tag_me_academy"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_academy"
                android:layout_marginLeft="@dimen/unit_padding"
                android:layout_marginStart="@dimen/unit_padding"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginTop="@dimen/unit_padding">

            <TextView
                android:text="@string/tag_me_major"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_major"
                android:layout_marginLeft="@dimen/unit_padding"
                android:layout_marginStart="@dimen/unit_padding"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginTop="@dimen/unit_padding">

            <TextView
                android:text="@string/tag_me_name"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_marginLeft="@dimen/unit_padding"
                android:layout_marginStart="@dimen/unit_padding"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginTop="@dimen/unit_padding">

            <TextView
                android:text="@string/tag_me_student_no"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_student_no"
                android:layout_marginLeft="@dimen/unit_padding"
                android:layout_marginStart="@dimen/unit_padding"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginTop="@dimen/unit_padding">

            <TextView
                android:text="@string/tag_me_term"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_term"
                android:layout_marginLeft="@dimen/unit_padding"
                android:layout_marginStart="@dimen/unit_padding"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="16sp"
                android:text="@string/loading"
                android:textStyle="bold" />

        </TableRow>

        <TableRow android:layout_marginTop="@dimen/unit_padding">

            <TextView
                android:id="@+id/tv_tag_before_vocation"
                android:text="@string/tag_me_before_vocation"
                android:textColor="@android:color/secondary_text_dark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_before_vocation"
                android:layout_marginLeft="@dimen/unit_padding"
                android:layout_marginStart="@dimen/unit_padding"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="16sp"
                android:text="@string/loading"
                android:textStyle="bold" />

        </TableRow>

    </TableLayout>

</ScrollView>