<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horz_margin"
            android:paddingRight="@dimen/activity_horz_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/school_name" />

            <Spinner
                android:id="@+id/spinner_schools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_unit_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/unit_padding"
                android:text="@string/stu_no" />

            <EditText
                android:id="@+id/et_stu_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_unit_padding"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="32"
                android:selectAllOnFocus="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/unit_padding"
                android:text="@string/password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_unit_padding"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="64"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/tv_visit_official"
                android:layout_marginTop="@dimen/double_unit_padding"
                android:layout_gravity="end"
                android:singleLine="true"
                android:ellipsize="start"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <View
        android:background="?android:attr/dividerHorizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <FrameLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_sign_in"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSignInClick"
            android:text="@string/sign_in" />

    </FrameLayout>

</LinearLayout>